# wesen

./: .gitignore  README.md  profile.py  pyproject.toml  testradius.py  testrange.py  wesen
src/Wesen/: __main__.py  configed.py  defaults.py  defaultwesensource.py  loader.py  persistence.py  point.py  strings.py  wesend.py  world.py
src/Wesen/gui/: basicgui.py  graph.py  gui.py  map.py  object.py  text.py
src/Wesen/objects/: base.py  food.py  wesen.py
src/Wesen/sources/: example.py
src/Wesen/sources/DrunkenSailor/: main.py
src/Wesen/sources/Dwarf/: helper.py  main.py
src/Wesen/sources/GreatRabbit/: main.py
src/Wesen/sources/Manual/: main.py
src/Wesen/sources/Nightwatch/: helper.py  main.py
src/Wesen/sources/Rincewind/: helper.py  main.py
src/Wesen/sources/Scanner/: main.py
src/Wesen/sources/SoberSailor/: main.py
src/Wesen/sources/WindlePoons/: main.py
src/Wesen/sources/wesen/: main.py
src/wesen/: __main__.py
src/wesen/gui/: gui.py  text.py
tests/: persistence.py
