[project]
name = "wesen"
version = "0.3.0"
description = "game where players program the behavior of their Wesens to defeat the other players"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "PyOpenGL>=3.1.0",
    "Pillow>=12.2.0", # which versions are tested?
]

[project.scripts]
wesen = "Wesen.loader:Loader"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.wesen.system-dependencies]
apt = ["freeglut3-dev"]
pacman = ["freeglut"]
homebrew = ["freeglut"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = false
warn_unused_configs = true