[project]
name = "wesen"
version = "0.7.0"
description = "game where players program the behavior of their Wesens to defeat the other players"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "PyOpenGL>=3.1.0",
    "Pillow>=12.2.0", # which versions are tested?
]

[project.scripts]
wesen = "Wesen.loader:Loader"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.wesen.system-dependencies]
apt = ["freeglut3-dev"]
pacman = ["freeglut"]
homebrew = ["freeglut"]

[tool.ruff]
line-length = 75
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I", "UP"]

[tool.mypy]
strict = false
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "OpenGL.*"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.13",
]
